--- a/ifxdbload-core/build.gradle
+++ b/ifxdbload-core/build.gradle
@@ -12,5 +12,5 @@ dependencies {
   //compile group: 'cz.tconsult.lib', name: 'dbutil-informix', version: '2.0.1'
   // compile group: 'cz.tconsult.lib', name: 'parsing-core', version: '1.1.26'
  // compile group: 'cz.tconsult.lib', name: 'parsing-spl', version: '1.1.26'
-  compile(group: 'cz.tconsult.lib', name: 'sump', version: '5.1.0')
+  //compile(group: 'cz.tconsult.lib', name: 'sump', version: '5.1.0')
 }
