--- a/ifxdbload-core/dependencies.gradle
+++ b/ifxdbload-core/dependencies.gradle
@@ -1,5 +1,29 @@
 dependencies {
 
 	testImplementation group: 'ch.qos.logback', name: 'logback-classic'
+	
+	// https://mvnrepository.com/artifact/commons-io/commons-io
+	compile group: 'commons-io', name: 'commons-io', version: '2.6'
+	
+	// https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
+	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
+	
+	// https://mvnrepository.com/artifact/com.google.guava/guava
+	compile group: 'com.google.guava', name: 'guava', version: '27.0.1-jre'
+	
+	// https://mvnrepository.com/artifact/org.jdom/jdom
+	compile group: 'org.jdom', name: 'jdom', version: '1.1.3'
+	
+	compile(group: 'cz.tconsult.lib', name: 'tuples', version: '1.0.3')
+	
+	// https://mvnrepository.com/artifact/org.projectlombok/lombok
+	compile group: 'org.projectlombok', name: 'lombok', version: '1.18.6'
+	
+	compile(group: 'cz.tconsult.lib', name: 'exception', version: '1.0.0')
+	
+	// https://mvnrepository.com/artifact/org.springframework/spring-jdbc
+	compile group: 'org.springframework', name: 'spring-jdbc', version: '5.1.5.RELEASE'
+	
+	
 
 }
