RSTS-34115: Zaveden hikari pool a připojení natvrdo k databázi "zavadec"

--- a/ifxdbload-workflow/dependencies.gradle
+++ b/ifxdbload-workflow/dependencies.gradle
@@ -1,5 +1,8 @@
 dependencies {
 	implementation project(':ifxdbload-core')
 
-	implementation group: 'ch.qos.logback', name: 'logback-classic'
+	// https://mvnrepository.com/artifact/hikari-cp/hikari-cp
+	implementation group: 'hikari-cp', name: 'hikari-cp', version: '2.7.0'
+	
+	runtimeOnly group: 'com.informix', name: 'ifxjdbc', version: '4.10.JC9'
 }
