--- a/ifxdbload-core/build.gradle
+++ b/ifxdbload-core/build.gradle
@@ -1,13 +1,11 @@
-plugins {
-	id 'java-library'
-}
+apply plugin: 'java-library'
 
 apply from: 'dependencies.gradle'
 
 
 // Dependence k revizi
 dependencies {
-  compile group: 'cz.tconsult.lib', name: 'dbloader-itf', version: '1.1.0' 
+  api group: 'cz.tconsult.lib', name: 'dbloader-itf' 
   //compile group: 'cz.tconsult.lib', name: 'dbutil-core', version: '2.0.0'
   //compile group: 'cz.tconsult.lib', name: 'dbutil-informix', version: '2.0.1'
   // compile group: 'cz.tconsult.lib', name: 'parsing-core', version: '1.1.26'
