--- a/ifxdbload-core/dependencies.gradle
+++ b/ifxdbload-core/dependencies.gradle
@@ -1,29 +1,34 @@
 dependencies {
 
+  implementation group: 'cz.tconsult.lib', name: 'tuples'
+  implementation group: 'cz.tconsult.lib', name: 'exception'
+  implementation group: 'cz.tconsult.lib', name: 'developersettings'
+  
+
 	testImplementation group: 'ch.qos.logback', name: 'logback-classic'
 	
 	// https://mvnrepository.com/artifact/commons-io/commons-io
-	compile group: 'commons-io', name: 'commons-io', version: '2.6'
+	implementation group: 'commons-io', name: 'commons-io'
 	
 	// https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
-	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
+	implementation group: 'org.apache.commons', name: 'commons-lang3'
+  
+  implementation group: 'commons-lang', name: 'commons-lang'
+  
+  implementation group: 'commons-beanutils',  name: 'commons-beanutils'
+  implementation group: 'commons-configuration', name: 'commons-configuration'
 	
 	// https://mvnrepository.com/artifact/com.google.guava/guava
-	compile group: 'com.google.guava', name: 'guava', version: '27.0.1-jre'
+	implementation group: 'com.google.guava', name: 'guava'
 	
 	// https://mvnrepository.com/artifact/org.jdom/jdom
-	compile group: 'org.jdom', name: 'jdom', version: '1.1.3'
-	
-	compile(group: 'cz.tconsult.lib', name: 'tuples', version: '1.0.3')
+	implementation group: 'org.jdom', name: 'jdom'
 	
 	// https://mvnrepository.com/artifact/org.projectlombok/lombok
-	compile group: 'org.projectlombok', name: 'lombok', version: '1.18.6'
-	
-	compile(group: 'cz.tconsult.lib', name: 'exception', version: '1.0.0')
+	compileOnly group: 'org.projectlombok', name: 'lombok'
+  annotationProcessor group: 'org.projectlombok', name: 'lombok'
 	
 	// https://mvnrepository.com/artifact/org.springframework/spring-jdbc
-	compile group: 'org.springframework', name: 'spring-jdbc', version: '5.1.5.RELEASE'
+	implementation group: 'org.springframework', name: 'spring-jdbc'
 	
-	
-
 }
