--- a/ifxdbload-workflow/dependencies.gradle
+++ b/ifxdbload-workflow/dependencies.gradle
@@ -1,8 +1,28 @@
 dependencies {
-	implementation project(':ifxdbload-core')
+	implementation project (':ifxdbload-core')
+  
+  // https://mvnrepository.com/artifact/org.projectlombok/lombok
+	compileOnly group: 'org.projectlombok', name: 'lombok'
+  annotationProcessor group: 'org.projectlombok', name: 'lombok'
+  
+  // https://mvnrepository.com/artifact/commons-io/commons-io
+	implementation group: 'commons-io', name: 'commons-io'
 
+  // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
+	implementation group: 'org.apache.commons', name: 'commons-lang3'
+  
 	// https://mvnrepository.com/artifact/hikari-cp/hikari-cp
 	implementation group: 'hikari-cp', name: 'hikari-cp', version: '2.7.0'
+  
+  // https://mvnrepository.com/artifact/com.google.guava/guava
+	implementation group: 'com.google.guava', name: 'guava'
 	
 	runtimeOnly group: 'com.informix', name: 'ifxjdbc', version: '4.10.JC9'
+  
+  // https://mvnrepository.com/artifact/org.springframework/spring-jdbc
+	implementation group: 'org.springframework', name: 'spring-jdbc'
+  
+  // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
+  testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api'
+
 }
