RSTS-33978: vyhození lexeru a spl lexeru do knihoven

--- a/ifxdbload-core/build.gradle
+++ b/ifxdbload-core/build.gradle
@@ -4,6 +4,10 @@ plugins {
 
 apply from: 'dependencies.gradle'
 
+dependencies {
+	// lexer použijeme pro jednoduchý parser
+	implementation group: 'cz.tconsult.lib', name: 'spllexer'
+}
 
 // Dependence k revizi
 dependencies {
