--- a/ifxdbload-tool/dependencies.gradle
+++ b/ifxdbload-tool/dependencies.gradle
@@ -1,8 +1,27 @@
 dependencies {
+implementation project(':ifxdbload-core')
 	implementation project(':ifxdbload-workflow')
 
+  implementation group: 'cz.tconsult.lib', name: 'dbloader-itf'
+  implementation group: 'cz.tconsult.lib', name: 'dbutil-core'
+  
 	implementation group: 'ch.qos.logback', name: 'logback-classic'
 	
-	compile(group: 'cz.tconsult.lib', name: 'pgmbase-core', version: '3.0.5')
-	compile(group: 'cz.tconsult.lib', name: 'pgmbase-db', version: '3.0.5')
+	implementation group: 'cz.tconsult.lib', name: 'pgmbase-core'
+	implementation group: 'cz.tconsult.lib', name: 'pgmbase-db'
+  
+	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api'
+	testRuntime group: 'org.junit.jupiter', name: 'junit-jupiter-engine'
+
+}
+
+//TODO: Implementaci povýšit a zbavit se těchto obstarožních závislostí
+dependencies {
+
+  implementation group: 'cz.tconsult.lib', name: 'sump'
+      
+  implementation group: 'commons-logging', name: 'commons-logging'
+  
+  implementation group: 'commons-lang', name: 'commons-lang'
+  
 }
