--- a/libs.gradle
+++ b/libs.gradle
@@ -1,31 +1,39 @@
 dependencyManagement {
 	dependencies { 
-		dependencySet(group: 'cz.tconsult.lib', version: '1.2.0') {
-			entry 'parsing-core'
-			entry 'parsing-spl'
-			entry 'parsing-oraplsql'
-			entry 'parsing-jaccutil' // na-zahozeni: není potřeba nikým jiným
-		}
-
-		dependency group: 'cz.tconsult.lib', name: 'spllexer', version: '1.0.0'
-
-		dependency group: 'org.projectlombok', name: 'lombok', version: '1.18.6'
-
-		dependency group: 'commons-lang', name: 'commons-lang', version: '2.6'
-		dependency group: 'org.apache.commons', name: 'commons-lang3', version:'3.8.1'
-		dependency group: 'commons-logging', name: 'commons-logging', version: '1.2'
+		dependency group: 'com.google.guava', name: 'guava', version: '27.0.1-jre'
+		dependency group: 'com.informix', name: 'ifxjdbc', version: '4.10.JC9'
+		dependency group: 'commons-beanutils',  name: 'commons-beanutils',    version: '1.9.3'
 		dependency group: 'commons-collections', name: 'commons-collections', version: '3.2.2'
+		dependency group: 'commons-configuration', name: 'commons-configuration', version: '1.10'
 		dependency group: 'commons-io', name: 'commons-io', version:'2.4'
-		dependency group: 'org.jdom', name: 'jdom', version:'1.1.3'
-
-		dependency group: 'net.htmlparser.jericho', name: 'jericho-html', version: '3.4'
-
-		dependency group: 'org.apache.poi', name: 'poi', version: '3.10.1'
-		dependency group: 'org.apache.ant', name: 'ant', version: '1.8.2'
-	
-		dependency group: 'org.slf4j', name: 'slf4j-api', version: '1.7.+'
-
+		dependency group: 'cz.tconsult.lib', name: 'dbloader-itf', version: '2.0.0'
+		dependency group: 'cz.tconsult.lib', name: 'dbutil-core', version: '3.0.0'
+		dependency group: 'cz.tconsult.lib', name: 'developersettings', version:'2.0.0'
+		dependency group: 'cz.tconsult.lib', name: 'exception', version: '1.0.0'
+		dependency group: 'cz.tconsult.lib', name: 'pgmbase-core', version: '4.0.0'
+		dependency group: 'cz.tconsult.lib', name: 'pgmbase-db', version: '4.0.0'
+		dependency group: 'cz.tconsult.lib', name: 'spllexer', version: '1.0.0'
+		dependency group: 'cz.tconsult.lib', name: 'tuples', version: '1.0.3'
+		dependency group: 'hikari-cp', name: 'hikari-cp', version: '2.7.0'
 		dependency group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.+'
-
+		dependency group: 'net.htmlparser.jericho', name: 'jericho-html', version: '3.4'
+		dependency group: 'org.apache.ant', name: 'ant', version: '1.8.2'
+		dependency group: 'org.apache.commons', name: 'commons-collections4', version: '4.3'
+		dependency group: 'org.apache.commons', name: 'commons-lang3', version:'3.8.1'
+		dependency group: 'org.apache.poi', name: 'poi', version: '3.10.1'
+		dependency group: 'org.jdom', name: 'jdom', version:'1.1.3'
+		dependency group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.4.0'
+		dependency group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.4.0'
+		dependency group: 'org.projectlombok', name: 'lombok', version: '1.18.6'
+		dependency group: 'org.projectlombok', name: 'lombok', version: '1.18.6'
+		dependency group: 'org.slf4j', name: 'slf4j-api', version: '1.7.+'
+		dependency group: 'org.springframework', name: 'spring-jdbc', version: '5.1.5.RELEASE'
 	}
+  
+	 //TODO: Implementaci povýšit a zbavit se těchto obstarožních závislostí
+	dependencies {
+		dependency group: 'cz.tconsult.lib', name: 'sump', version : '6.0.0'
+		dependency group: 'commons-logging', name: 'commons-logging', version: '1.2'
+		dependency group: 'commons-lang', name: 'commons-lang', version: '2.6'
+  	}
 }
