--- a/libs.gradle
+++ b/libs.gradle
@@ -21,6 +21,7 @@ dependencyManagement {
 		dependency group: 'org.apache.ant', name: 'ant', version: '1.8.2'
 		dependency group: 'org.apache.commons', name: 'commons-collections4', version: '4.3'
 		dependency group: 'org.apache.commons', name: 'commons-lang3', version:'3.8.1'
+		dependency group: 'org.apache.commons', name: 'commons-text', version: '1.6'
 		dependency group: 'org.apache.poi', name: 'poi', version: '3.10.1'
 		dependency group: 'org.jdom', name: 'jdom', version:'1.1.3'
 		dependency group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.4.0'
